--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="styles/main.css">
+
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,6 +16,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   <link rel="manifest" href="images/site.webmanifest">
 
+  <link rel="stylesheet" href="styles/main.css">
 
   <!--Facebook open graph -->
   <meta name="theme-color" content="#1e3799">
@@ -97,7 +98,18 @@
     </p>
   </footer>
 
-
 </body>
+
+<svg>
+  <symbol id="menuicon" viewBox="0 0 100 80" width="40" height="40">
+    <rect width="100" height="20"></rect>
+    <rect y="30" width="100" height="20"></rect>
+    <rect y="60" width="100" height="20"></rect>
+  </symbol>
+
+
+</svg>
+
+
 
 </html>
