--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <source media="(min-width:801px)" srcset="images/hero-switzerland-2000px.jpg">
     <source media="(min-width:401px)" srcset="images/hero-switzerland-800px.jpg">
     <source media="(min-width:400px)" srcset="images/hero-switzerland-400px.jpg">
-    <img src="images/hero-switzerland-800px.jpg" alt="the old city of Bern, switzerland at sunset">
+    <img src="images/hero-switzerland-800px.jpg" alt="the old city of Bern, switzerland at sunset" width="800"
+      height="851">
 
   </picture>
   <header>
@@ -101,18 +102,18 @@
     </p>
   </footer>
 
+
+  <svg>
+    <symbol id="menuicon" viewBox="0 0 100 80" width="40" height="40">
+      <rect width="100" height="20"></rect>
+      <rect y="30" width="100" height="20"></rect>
+      <rect y="60" width="100" height="20"></rect>
+    </symbol>
+
+
+  </svg>
+
 </body>
-
-<svg>
-  <symbol id="menuicon" viewBox="0 0 100 80" width="40" height="40">
-    <rect width="100" height="20"></rect>
-    <rect y="30" width="100" height="20"></rect>
-    <rect y="60" width="100" height="20"></rect>
-  </symbol>
-
-
-</svg>
-
 
 
 </html>
