--- a/about/index.html
+++ b/about/index.html
@@ -35,7 +35,8 @@
   <img srcset="../images/germanymadison-300px.jpg 300w,
               ../images/germanymadison-600px.jpg 600w,
               ../images/germanymadison-900px.jpg 900w" src="../images/germanymadison-600px.jpg" sizes="50vw"
-    alt="a blonde woman in a brown dress holding a glass of orange juice on a balcony overlooking the Neckar river in Tübingen, Germany">
+    alt="a blonde woman in a brown dress holding a glass of orange juice on a balcony overlooking the Neckar river in Tübingen, Germany"
+    width="600" height="778">
 
   <main>
     <h1>About</h1>
