--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
   <link rel="manifest" href="images/site.webmanifest">
 
   <link rel="stylesheet" href="styles/main.css">
+  <!-- Zilla SLab and Arya
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arya">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Zilla Slab">
+-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alex Brush">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT Sans">
 
   <!--Facebook open graph -->
   <meta name="theme-color" content="#1e3799">
